# mxw

./: Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: release.yml
src/: args.rs  glorious.rs  main.rs
src/config/: debounce.rs  dpi_colors.rs  dpi_stage.rs  dpi_stages.rs  led_brightness.rs  led_effect.rs  lift_off.rs  mod.rs  polling_rate.rs  profile.rs  scroll.rs  sleep.rs
src/config/bind/: dpi.rs  key.rs  keyboard.rs  media.rs  mod.rs  mouse.rs
src/lib/: getstatus.rs  mod.rs  none.rs
src/libs/: key.rs  range.rs
src/report/: battery.rs  firmware.rs
src/util/: color.rs  getstatus.rs  key.rs  mod.rs  none.rs  range.rs  status.rs
