[package]
name = "mxw"
authors = ["Ola Næss Kaldestad <mail@okal.no>", "Damian Bednarczyk <damian@bednarczyk.xyz>"]
version = "0.1.1"
edition = "2021"
description = """
Cross platform CLI tool for Glorious' wireless mice.

Originally reverse engineered using USB packet logs sniffed with
WireShark and USBPcap, as well as a decompilation of the official
Windows program (Glorious Core).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
hidapi = "2.4"
colored = "2.0"
strum = "0.25.0"
strum_macros = "0.25.3"
